@@ -1,3 +1,9 @@
+2001-05-18  Angela Marie Thomas <angela@cygnus.com>
+
+        * testsuite/lib/libstdc++-v3-dg.exp (libstdc++-v3-init): Set flags
+        appropriately for remote testing and testing installed files without
+        a build dir.
+
 2001-05-18  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* acinclude.m4 (GLIBCPP_EXPORT_INSTALL_INFO): Set glibcpp_srcdir
